<resources>
    <string name="app_name">7 Minutes Workout</string>
    <string name="start">START</string>
    <string name="start_image">Start Image</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE:</string>
    <string name="tak">#212121</string>
    <string name="end">END</string>
    <string name="finish">FINISH</string>
    <string name="back_confirmation_text">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="confirmation_yes">YES</string>
    <string name="confirmation_no">NO</string>
    <string name="confirmation_text">Are you sure?</string>
    <string name="bmi">BMI</string>
    <string name="calculate">CALCULATE</string>
    <string name="bmi_underweight">You\'re underweight! Being underweight could be a sign you\'re not eating enough or you may be ill</string>
    <string name="bmi_normal">You\'re having healthy weight! Keep up the good work!</string>
    <string name="bmi_overweight">You\'re overweight! Don\'t give up! Keep up exercising!</string>
    <string name="bmi_obese">You\'re obese! Don\'t give up! Keep up exercising! You\'ll do it</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
    <string name="exercise_completed">EXERCISES COMPLETED</string>
    <string name="fields_should_not_be_empty">Fields shouldn\'t be empty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_bmi_title">Calculator</string>
    <string name="fragment_history_title">History</string>
    <string name="fragment_exercise_title">Time to exercise</string>
    <string name="fragment_finish_title">Finish</string>
    <string name="fragment_home_title">7 minutes workout</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_done_the_workout">You have done the workout!</string>
    <string name="selected_language_not_supported">Selected language not supported!</string>
</resources>