<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/bmiFragment"
        android:name="com.example.sevenminutesworkout.presentation.fragments.BmiFragment"
        android:label="@string/fragment_bmi_title"
        tools:layout="@layout/fragment_bmi">
        <action
            android:id="@+id/action_bmiFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.example.sevenminutesworkout.presentation.fragments.HistoryFragment"
        android:label="@string/fragment_history_title"
        tools:layout="@layout/fragment_history">
        <action
            android:id="@+id/action_historyFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/exerciseFragment"
        android:name="com.example.sevenminutesworkout.presentation.fragments.ExerciseFragment"
        android:label="@string/fragment_exercise_title"
        tools:layout="@layout/fragment_exercise">
        <action
            android:id="@+id/action_exerciseFragment_to_finishFragment"
            app:destination="@id/finishFragment" />
        <action
            android:id="@+id/action_exerciseFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/finishFragment"
        android:name="com.example.sevenminutesworkout.presentation.fragments.FinishFragment"
        android:label="@string/fragment_finish_title"
        tools:layout="@layout/fragment_finish">
        <action
            android:id="@+id/action_finishFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.sevenminutesworkout.presentation.fragments.HomeFragment"
        android:label="@string/fragment_home_title"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_bmiFragment"
            app:destination="@id/bmiFragment" />
        <action
            android:id="@+id/action_homeFragment_to_historyFragment"
            app:destination="@id/historyFragment" />
        <action
            android:id="@+id/action_homeFragment_to_exerciseFragment"
            app:destination="@id/exerciseFragment" />
    </fragment>
</navigation>