<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.HomeFragment">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/start_image"
        android:src="@drawable/home_logo"
        app:layout_constraintBottom_toTopOf="@id/flStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/flStart"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background="@drawable/item_color_accent_border_ripple_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/default_button_text_size"
            android:textStyle="bold" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/flBMI"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/item_circular_color_accent_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/flHistory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flStart">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bmi"
            android:textColor="@color/white"
            android:textSize="@dimen/default_button_text_size"
            android:textStyle="bold" />

    </FrameLayout>


    <FrameLayout
        android:id="@+id/flHistory"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/item_circular_color_accent_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/flBMI"
        app:layout_constraintTop_toBottomOf="@id/flStart">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_history" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculator"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/default_button_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/flBMI"
        app:layout_constraintStart_toStartOf="@id/flBMI"
        app:layout_constraintTop_toBottomOf="@id/flBMI" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="History"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/default_button_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/flHistory"
        app:layout_constraintStart_toStartOf="@id/flHistory"
        app:layout_constraintTop_toBottomOf="@id/flBMI" />


</androidx.constraintlayout.widget.ConstraintLayout>