<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.BmiFragment">

    <RadioGroup
        android:id="@+id/rgUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/radio_group_tab_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbMetricUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.5"
            android:background="@drawable/units_tab_selector"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/metric_units"
            android:textColor="@drawable/units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbUsUnits"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="0.5"
            android:background="@drawable/units_tab_selector"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:text="@string/us_units"
            android:textColor="@drawable/units_tab_text_color_selector"
            android:textSize="16sp"
            android:textStyle="bold" />


    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMetricUnitWeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgUnits">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="WEIGHT (in kg)"
            android:inputType="numberDecimal"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsUnitWeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgUnits">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUsWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="WEIGHT (in pounds)"
            android:inputType="numberDecimal"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMetricUnitHeight"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:boxStrokeColor="@color/colorAccent"
        app:hintTextColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilMetricUnitWeight">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="HEIGHT (in cm)"
            android:inputType="numberDecimal"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/llHeightUS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilMetricUnitWeight"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFeet"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:boxStrokeColor="@color/colorAccent"
            app:hintTextColor="@color/colorAccent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etFeet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/feet"
                android:inputType="numberDecimal"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilInch"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:boxStrokeColor="@color/colorAccent"
            app:hintTextColor="@color/colorAccent">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etInch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/inch"
                android:inputType="numberDecimal"
                android:textSize="16sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/tvYourBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilMetricUnitHeight" />

    <TextView
        android:id="@+id/tvBMIInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:textColor="@color/dark_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvYourBMI" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBMIInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>